--- a/css/layout.css
+++ b/css/layout.css
@@ -1,6 +1,9 @@
 #macbook-img{
-  width: 99%;
-  height: 99%;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  clear: both;
+  box-sizing: border-box;
 }
 
 #colored-heading,h2{
@@ -8,11 +11,12 @@
 }
 
 #me{
-  width: 40%;
+  max-width: 50%;
   padding: 50px;
   height: auto;
-  display: inline-block;;
+  display: inline-block;
   border-radius: 50%;
+  clear: both;
 }
 
 #keep-portland-weird{
